Do not send the interfaceRemoved signal if NM stopped or crashed. If it has crashed we can crash too if we send the interfaceRemoved signal here.

BUG: 296740